--- a/app/views/guides/guide_02.html.erb
+++ b/app/views/guides/guide_02.html.erb
@@ -23,60 +23,76 @@
       <!-- <div class="column_box last_column_box">
         <div class="flex column" onclick="currentSlide(Page_Number)">
           <img src="Image_URL">
+          <% if can? :update, @guides%><div class="num">Product_Num</div><% end %>
         </div>
         <div class="flex column" onclick="currentSlide(Page_Number)">
           <img src="Image_URL">
+          <% if can? :update, @guides%><div class="num">Product_Num</div><% end %>
         </div>
         <div class="flex column" onclick="currentSlide(Page_Number)">
           <img src="Image_URL">
+          <% if can? :update, @guides%><div class="num">Product_Num</div><% end %>
         </div>
         <div class="flex column last_box" onclick="currentSlide(Page_Number)">
           <img src="Image_URL">
+          <% if can? :update, @guides%><div class="num">Product_Num</div><% end %>
         </div>
       </div> -->
 
       <div class="column_box last_column_box">
         <div class="flex column" onclick="currentSlide(1)">
           <img src="https://images-na.ssl-images-amazon.com/images/I/61hFt1U36oL._SX679_.jpg">
+          <% if can? :update, @guides%><div class="num">1</div><% end %>
         </div>
         <div class="flex column" onclick="currentSlide(2)">
           <img src="https://images-na.ssl-images-amazon.com/images/I/81WHPKz8CkL._SX679_.jpg">
+          <% if can? :update, @guides%><div class="num">2</div><% end %>
         </div>
         <div class="flex column" onclick="currentSlide(3)">
           <img src="https://images-na.ssl-images-amazon.com/images/I/71JJABexT7L._SX679_.jpg">
+          <% if can? :update, @guides%><div class="num">3</div><% end %>
         </div>
         <div class="flex column last_box" onclick="currentSlide(4)">
           <img src="https://images-na.ssl-images-amazon.com/images/I/81Ya3gBgyGL._SX522_.jpg">
+          <% if can? :update, @guides%><div class="num">4</div><% end %>
         </div>
       </div>
 
       <div class="column_box last_column_box">
         <div class="flex column" onclick="currentSlide(5)">
           <img src="https://images-na.ssl-images-amazon.com/images/I/61iLvSIIIqL._SX679_.jpg">
+          <% if can? :update, @guides%><div class="num">5</div><% end %>
         </div>
         <div class="flex column" onclick="currentSlide(6)">
           <img src="https://images-na.ssl-images-amazon.com/images/I/71MwCSouiOL._SX679_.jpg">
+          <% if can? :update, @guides%><div class="num">6</div><% end %>
         </div>
         <div class="flex column" onclick="currentSlide(7)">
           <img src="https://images-na.ssl-images-amazon.com/images/I/719Bp1G7EzL._SY500_.jpg">
+          <% if can? :update, @guides%><div class="num">7</div><% end %>
         </div>
         <div class="flex column last_box" onclick="currentSlide(8)">
           <img src="https://images-na.ssl-images-amazon.com/images/I/51YPHbnxfjL.jpg">
+          <% if can? :update, @guides%><div class="num">8</div><% end %>
         </div>
       </div>
 
       <div class="column_box last_column_box">
         <div class="flex column" onclick="currentSlide(9)">
           <img src="https://images-na.ssl-images-amazon.com/images/I/81WR58-w2AL._UX679_.jpg">
+          <% if can? :update, @guides%><div class="num">9</div><% end %>
         </div>
         <div class="flex column" onclick="currentSlide(10)">
           <img src="https://images-na.ssl-images-amazon.com/images/I/61-78oUuhgL._SX679_.jpg">
+          <% if can? :update, @guides%><div class="num">10</div><% end %>
         </div>
         <div class="flex column" onclick="currentSlide(11)">
           <img src="https://images-na.ssl-images-amazon.com/images/I/41s1F1DAnqL.jpg">
+          <% if can? :update, @guides%><div class="num">11</div><% end %>
         </div>
         <div class="flex column last_box" onclick="currentSlide(12)">
           <img src="https://images-na.ssl-images-amazon.com/images/I/51xfN70MYZL._SX679_.jpg">
+          <% if can? :update, @guides%><div class="num">12</div><% end %>
         </div>
       </div>
 
