--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -22,7 +22,7 @@
         <li><a href="/recommends/">FEATURED<span>,</span></a></li>
         <li><a href="/deals/bestdeals">DEALS <em>of Amazon</em></a></li>
       </ul>
-      <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="모바일 메뉴 닫기" /></button>
+      <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close mobile menu" /></button>
       
     </div><!--./gnb_m-->
   </div><!--./wrap-->
