--- a/app/views/shared/_header_short.html.erb
+++ b/app/views/shared/_header_short.html.erb
@@ -1,22 +1,43 @@
-<header class="header_short clearfix">
+<div class="fix_header_wrap clearfix">
   <div class="wrap">
-    <!-- <button class="gnb_open2"><img src="<%=asset_path 'more_black.png' %>" alt="open mobile menu" /></button> -->
+   <div class="fix_header clearfix">
+     <a href="/"><img class="oh_logo" src="<%=asset_path 'oh_logo.jpg' %>" alt="ohigottabuythis" /></a>
+     <div class="fix_visual">
+      <h1><a href="/"><img src="<%=asset_path 'visual_01.jpg' %>" alt="ohigottabuythis" /></a></h1>
+     </div>
+     <ul class="clearfix">
+      <li><a href="/categories/">CATEGORY<span>,</span></a></li>
+      <li><a href="/recommends/">FEATURED<span>,</span></a></li>
+      <li><a href="/deals/bestdeals">DEALS <em>of Amazon</em></a></li>
+     </ul>      
+   </div>
+  </div>
+</div>
 
-    <div class="gnb_pc clearfix">
+<header class="clearfix m_header">
+  <div class="wrap">
+    <button class="gnb_open2"><img src="<%=asset_path 'more_black.png' %>" alt="open mobile menu" /></button>
+
+    <div class="on gnb_pc clearfix">
       <a href="/"><img class="oh_logo" src="<%=asset_path 'oh_logo.jpg' %>" alt="ohigottabuythis" /></a>
-
       <div class="visual">
         <h1><a href="/"><img src="<%=asset_path 'visual_01.jpg' %>" alt="ohigottabuythis" /></a></h1>
-      </div>
-
-      <ul class="clearfix">
-        <li><a href="/categories/">CATEGORY<span>,</span></a></li>
-        <li><a href="/recommends/">FEATURED<span>,</span></a></li>
-        <li><a href="/deals/promo_codes">DEALS <em>of Amazon</em></a></li>
-      </ul>      
+      </div>     
     </div>
     
+    <div class="gnb_m">      
+      <ul class="clearfix">
+        <li><a href="/">HOME<span>,</span></a></li> 
+        <li><a href="/categories/">CATEGORY<span>,</span></a></li>
+        <li><a href="/recommends/">FEATURED<span>,</span></a></li>
+        <li><a href="/deals/bestdeals">DEALS <em>of Amazon</em></a></li>
+      </ul>
+      <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="모바일 메뉴 닫기" /></button>
+      
+    </div><!--./gnb_m-->
   </div><!--./wrap-->
 </header>
+
+
 
 
