--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -47,6 +47,10 @@
 <p>run out of stock soon</p>
 -->
 
+<!-- 
+<script type="text/javascript">amzn_assoc_placement = "adunit0";amzn_assoc_tracking_id = "3628-20";amzn_assoc_ad_mode = "search";amzn_assoc_ad_type = "smart";amzn_assoc_marketplace = "amazon";amzn_assoc_region = "US";amzn_assoc_default_search_phrase = "Case and Stand for 9.7-inch iPad Pro";amzn_assoc_default_category = "All";amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";amzn_assoc_title = "Shop Related Products";amzn_assoc_rows = "5";amzn_assoc_design = "text_links";</script>
+    <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script> -->
+
 <div class="card clearfix" data-score="32" data-price="27.06">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2XU8yPV"><img src="https://images-na.ssl-images-amazon.com/images/I/71ZzC0H6UNL._SX679_.jpg" alt="Speck Products StyleFolio Case" /></a>
@@ -56,8 +60,10 @@
     <span class="regular"><em>32% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2XU8yPV">Speck Products StyleFolio Case and Stand for 9.7-inch iPad Pro (Fits iPad Air 2, 1), 77233-5412</a></p>
+    
     <div class="code_high">
       <address><span class="dis_price bestdeals">$27.06</span><span class="ori_price">$39.95</span></address>
+      <!-- <div class=""><a target="_blank" href="#n">See more related with this.</a></div> -->
       <%= render 'deals/notes' %>
     </div>
   </div> 
