--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -45,6 +45,198 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="50" data-price="12.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2SpDvVS"><img src="https://m.media-amazon.com/images/I/51EYo7Q+Y-L._SR400,400_.jpg" alt="CAMEL CROWN Women's Jogger Pants" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>129 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2SpDvVS">CAMEL CROWN Women's Jogger Pants with Pockets Soft Drawstring Sweatpants for Gym Running Jogging Lounging</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.49</span><span class="ori_price">$24.99</span></address>
+      <textarea readonly="readonly" class="code_area">50QI2WJD</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $24.99</strong> with promo code: <strong class="m_codes">50QI2WJD</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2SpDvVS">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="11.70">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XSh7L7"><img src="https://m.media-amazon.com/images/I/71M0Jk9LkgL._SR400,400_.jpg" alt="Spring Assisted Knife" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>6 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XSh7L7">Spring Assisted Knife -Pocket Folding Knife - Military Style - Boy Scouts Knife - Tactical Knife - Good Survival...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.70</span><span class="ori_price">$38.99</span></address>
+      <textarea readonly="readonly" class="code_area">704339V6</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $38.99</strong> with promo code: <strong class="m_codes">704339V6</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2XSh7L7">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="31" data-price="26.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/32yF3BH"><img src="https://m.media-amazon.com/images/I/71hKl0327yL._SR400,400_.jpg" alt="Aitere 2500°F Fireproof Bag" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>40 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>31% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/32yF3BH">Aitere 2500°F Fireproof Bag (15"x12"x5" Inch), 2019 New-Version Fireproof Document & Money Bags - Non Itchy,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$26.90</span><span class="ori_price">$38.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">31AITERE</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>31% off at $38.99</strong> with promo code: <strong class="m_codes">31AITERE</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/32yF3BH">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="14.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/32AEg3f"><img src="https://m.media-amazon.com/images/I/713NSv8poPL._SR400,400_.jpg" alt="Flyby Hangover Cure & Prevention Pills" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,937 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/32AEg3f">Flyby Hangover Cure & Prevention Pills (30 Capsules) | Dihydromyricetin (DHM), Chlorophyll, Prickly Pear,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.39</span><span class="ori_price">$17.99</span></address>
+      <textarea readonly="readonly" class="code_area">20PRIMES</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $17.99</strong> with promo code: <strong class="m_codes">20PRIMES</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 19, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/32AEg3f">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="31.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y4LZTX"><img src="https://m.media-amazon.com/images/I/814TunoPDCL._SR400,400_.jpg" alt="BESTEK Power Strip Tower" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>601 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y4LZTX">BESTEK Power Strip Tower 8-Outlet and 6 Smart USB Charging Ports 1500 Joules Surge Protector with...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$31.99</span><span class="ori_price">$39.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">20W6GPUB</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $39.99</strong> with promo code: <strong class="m_codes">20W6GPUB</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 20, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Y4LZTX">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="75.64">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JWthJ8"><img src="https://m.media-amazon.com/images/I/61IK9zStb-L._SR400,400_.jpg" alt="Air Fryer Willsence Hot Air Fryer Oven" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>115 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JWthJ8">Air Fryer Willsence Hot Air Fryer Oven, 10 Cooking Presets with Led Sensor Touch, 3.7Qt Air Oven Auto Off,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$75.64</span><span class="ori_price">$88.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">15ZAAEN9</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>15% off at $88.99</strong> with promo code: <strong class="m_codes">15ZAAEN9</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 01, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2JWthJ8">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="16.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XPJVDP"><img src="https://m.media-amazon.com/images/I/81-3naXrXqL._SR400,400_.jpg" alt="Tempt Me Women Two Piece Swimsuit" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>3,184 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XPJVDP">Tempt Me Women Two Piece Swimsuit Off Shoulder Ruffled Flounce Crop Top Bikini with Cutout Bottom Set</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.79</span><span class="ori_price">$27.99</span></address>
+      <textarea readonly="readonly" class="code_area">40SP97EU</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $27.99</strong> with promo code: <strong class="m_codes">40SP97EU</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 25, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2XPJVDP">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="15.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2SmgHGA"><img src="https://m.media-amazon.com/images/I/510QJJzBpDL._SR400,400_.jpg" alt="Docamor Smart Plug" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>18 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2SmgHGA">Docamor Smart Plug - Dual WiFi Smart Outlet Compatible with Google Home & IFTTT, Alexa Echo - Mini Smart Socket,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.99</span><span class="ori_price">$31.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">5089BLM7</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $31.99</strong> with promo code: <strong class="m_codes">5089BLM7</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 23, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2SmgHGA">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="22.29">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XP2zeY"><img src="https://m.media-amazon.com/images/I/61+w+XNi4lL._SR400,400_.jpg" alt="Comfee’ MK-17G01B-E5 Electric Kettle" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>228 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XP2zeY">Comfee’ MK-17G01B-E5 Electric Kettle (BPA Free), 1.7L Black Fast Boiling Glass Water Boiler Hot Water Kettle...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$22.29</span><span class="ori_price">$44.58</span>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">50BYMZPV</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $44.58</strong> with promo code: <strong class="m_codes">50BYMZPV</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 21, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2XP2zeY">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="12" data-price="43.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XPBEjq"><img src="https://images-na.ssl-images-amazon.com/images/I/71Ffmoxwz8L._SX522_.jpg" alt="Musitrend Record Player Vinyl Turntable" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>98 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>12% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XPBEjq">Musitrend Record Player Vinyl Turntable with Speakers, 3 Speed Suitcase Record Player Support Vinyl-to-MP3 Recording,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$43.99</span><span class="ori_price">$49.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">1259PM8L</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>12% off at $49.99</strong> with promo code: <strong class="m_codes">1259PM8L</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 17, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2XPBEjq">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="8.49">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Sn99Uh"><img src="https://m.media-amazon.com/images/I/51pzePyLfyL._SR400,400_.jpg" alt="Phone Holder" /></a>
