--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -26,7 +26,7 @@
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
         <li><a href="/deals/quick_search">QUICK SEARCH,</a></li>
-        <li><a href="/deals/promotions">Coupon Codes & Promotions</a></li>
+        <li><a href="/deals/promotions">COUPON CODES & PROMOTIONS</a></li>
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
     </div>
