--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,10 +4,11 @@
 
       <div class="wrap">
         <div class="footer-content">
+          
           <div class="footer-section about clearfix">
             <h1 class="logo-text"><span>Oh,</span>i gotta buy this</h1>
-            <p>Oh,igottabuythis is the curation platform to discover awesome product from around the world and Staying up to date with the latest tech, the newest brilliant inventions, odd gadgets unique & weird design products</p>
-            <p>Oh,igottabuythis is the deal information platform to find thousands of Amazon best deals, coupon codes, you love. Easy to keep up to date with the latest information of deals</p>
+            <p>Oh,igottabuythis is the curation platform to discover awesome products from around the world and
+              find thousands of best deals, coupon codes from Amazon.<br />Staying up to date with the coolest gadgets and the latest information of deals </p>            
             <div class="contact">
               <span><i class="fas fa-envelope"></i> &nbsp; ohigottabuythis@gmail.com </span>
             </div>
@@ -22,14 +23,14 @@
           <div class="footer-section links clearfix">
             <h2>Quick Links</h2><br />
             <ul>
-              <a href="#n"><li>HOME</li></a>
-              <a href="#n"><li>CATEGORY</li></a>
-              <a href="#n"><li>FEATURED</li></a>
-              <a href="#n"><li>THE BEST DEALS</li></a>
-              <a href="#n"><li>PROMO CODES</li></a>
-              <a href="#n"><li>QUICK SEARCH</li></a>
+              <a href="/"><li>HOME</li></a>
+              <a href="/categories"><li>CATEGORY</li></a>
+              <a href="/recommends"><li>FEATURED</li></a>
+              <a href="/deals/bestdeals"><li>DAILY DEALS</li></a>
+              <a href="/deals/promo_codes"><li>PROMO CODES</li></a>
+              <a href="/deals/quick_search"><li>QUICK SEARCH</li></a>
+              <a href="/deals/promotions"><li>PROMOTIONS</li></a>
             </ul>
-
           </div>
 
           <div class="footer-section contact-form clearfix">
