--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -120,7 +120,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 @media screen and (min-width:681px) and (max-width:1199px){
   header .gnb_pc{margin-top:10px;text-align:center;}
   header .visual{}
-  header .visual img{width:85%;}
+  header .visual img{width:100%;}
   header .gnb_pc>ul{float:right;margin-top:0px;}
   header .gnb_pc>ul>li{float:left;width:180px;text-align:center;}
   header .gnb_pc>ul>li:nth-child(3){width:110px;}
@@ -145,7 +145,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 /* Begin For header_short */
 @media screen and (min-width:680px){
   .m_header{display:none;}
-  .fix_header{position:fixed;background:#fff;height:60px;width:100%;top:0;left:0;border-bottom:1px solid #ccc;padding-left:48px;}
+  .fix_header{position:fixed;background:#fff;height:60px;width:100%;top:0;left:0;border-bottom:1px solid #ccc;padding-left:48px;z-index:99;}
   .fix_header img{display:inline-block;float:left;width:50px;height:50px;margin:6px 10px 0 0;}
   .fix_header .fix_visual{float:left;height:100%;}
   .fix_header .fix_visual img{width:260px;height:30px;margin-top:15px;}
@@ -164,7 +164,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
   .fix_header{height:50px;}
-  .fix_header img{width:30px;height:30px;}
+  .fix_header img{width:30px;height:30px;margin-top:11px;}
   .fix_header .fix_visual{float:left;height:100%;}
   .fix_header .fix_visual img{width:200px;height:25px;margin-top:13px;}
   .fix_header ul{padding:0;}
@@ -240,7 +240,7 @@ header .gnb_m,header .gnb_open2{display:none;}
   .sub_nav .gnb_m>.gnb_close{display:block;position:absolute;right:0;top:12px;z-index:303;margin:0 5%;}
   .sub_nav .gnb_m>.gnb_close>img{width:50px;height:50px;}
 
-  .sub_nav .gnb_open{display:block;position:fixed;right:5px;top:40px;z-index:301;margin:0 5%;}
+  .sub_nav .gnb_open{display:block;position:fixed;right:5px;top:170px;z-index:301;margin:0 5%;}
   .sub_nav .gnb_open.on{display:none;}
   .sub_nav .gnb_open img{width:40px;height:40px;}
 
@@ -351,7 +351,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 
 
 /* for Footer Section */
-.footer{background:#000;color:#fff;height:400px;position:relative;font-family: 'Montserrat', sans-serif;}
+.footer{background:#000;color:#fff;height:350px;position:relative;font-family: 'Montserrat', sans-serif;}
 .footer .footer-content{height:350px;}
 .footer .footer-content .footer-section{padding:25px;}
 .footer .footer-content h1, .footer .footer-content h2{color:#fff;}
@@ -365,13 +365,32 @@ header .gnb_m,header .gnb_open2{display:none;}
 .footer .footer-content .about .socials a:hover{border:1px solid #fff;color:#fff;transition:all .3s;}
 .footer .footer-content .links ul a{padding:0 10px;display:block;margin-bottom:10px;font-size:17px;text-decoration:none;color:#fff;transition:all .3s;}
 .footer .footer-content .links ul a:hover{font-weight:bold;margin-left:15px;transition:all .3s;}
-.footer .footer-content .contact-form .contact-input{background:#272727;color:#fff;margin-bottom:10px;line-height:1.5rem;padding:.9rem 1.4rem;width:100%;border:none;}
+.footer .footer-content .contact-form .contact-input{background:#272727;color:#fff;margin-bottom:10px;line-height:1.5rem;padding:.5rem .8rem;width:100%;border:none;}
 .footer .footer-content .contact-form .contact-input:focus{background:#1a1a1a;}
 .footer .footer-content .contact-form .btn{padding:5px 10px;background:#006669;color:#fff;border:1px solid transparent;border-radius:5px;}
 .footer .footer-content .contact-form .btn-big{padding:7px 12px;line-height:.1.3rem;}
 .footer .footer-content .contact-form .contact-btn{float:right;}
 .footer .footer-bottom{background:#343a40;color:#686868;height:50px;width:100%;text-align:center;position:absolute;bottom:0px;left:0px;padding-top:13px;}
 
+@media screen and (max-width:640px){
+  .footer{height:auto;}
+  .footer .footer-content{height:auto;}
+  .footer .footer-content .footer-section{padding:15px;}
+  .footer .footer-content .about{float:none;width:100%;margin-right:0%;}
+  .footer .footer-content .links{float:none;width:100%;margin-right:%;}
+  .footer .footer-content .contact-form{float:none;width:100%;}
+  .footer .footer-content .links ul a{margin-bottom:5px;}
+}
+@media screen and (min-width:641px) and (max-width:1199px){
+  .footer{height:300px;}
+  .footer .footer-content .footer-section{padding:15px 0;}
+  .footer .footer-content h1, .footer .footer-content h2{font-size:18px;}
+  .footer .footer-content .about{float:left;width:34%;}
+  .footer .footer-content .links{float:left;width:26%;}
+  .footer .footer-content .contact-form{float:left;width:38%;}
+  .footer .footer-content .about .socials a{width:40px;height:40px;}
+  .footer .footer-content .links ul a{font-size:14px;}
+}
 
 
 
