--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -223,7 +223,7 @@
 .guide_header{width:1000px;margin:120px auto 50px auto;font-family:'Montserrat', sans-serif;}
 .guide_header h2{font-size:35px;width:50%;line-height:1.3;border-top:2px solid;border-bottom:2px solid;padding:10px 0;font-weight:900;}
 .guide_header h2.pink{color:pink;}
-.guide_show_header{width:1000px;margin:100px auto 0 auto;}
+.guide_show_header{width:1000px;margin:70px auto 0 auto;}
 .guide_show{font-family: 'Montserrat', sans-serif;width:1000px;margin:0 auto 100px auto;}
 .shoes_wrap{margin-top:35px;}
 .guide_show .group:before,
@@ -584,19 +584,19 @@
   .movie-card__content {margin-top: 1em;width: 100%;float: inherit;max-width: 100%;padding: 0 1em 1em;}
 }
 .movie-card__header{margin-bottom: 0;}
-.movie-card__title{color:#fff;margin-top:-10px;}
+.movie-card__title{color:#fff;margin-top:30px;font-size:35px;text-decoration:underline;}
 .movie-card__info{text-transform:uppercase;letter-spacing:2px;font-size:13px;color:#2a9fff;line-height:1;margin:0;font-weight:700;margin-top:-10px;}
 .movie-card__desc {font-weight: 300;color:#fff;}
 .movie-card__content .btn{padding: .5rem 2rem;/*background-color: rgba(255, 255, 255, 0.4);*/color: white;}
 .btn-outline{background-color: transparent;border: 3px solid #ffffff;}
 .btn-outline:hover {border-color: #2a9fff;color: #2a9fff;box-shadow: 0px 1px 8px 0px rgba(245, 199, 0, 0.2);}
 @media screen and (max-width:640px){
-  .movie-card__title{font-size:20px;margin:150px 0 5px 0;}
+  .movie-card__title{font-size:40px;margin:175px 0 5px 0;}
   .movie-card__content a{font-size:15px;margin:5px;}
   .movie-card[data-movie="Blade Runner"]{margin-bottom:60px;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
-  .movie-card__title{font-size:17px;}
+  .movie-card__title{font-size:30px;margin-top:50px;}
   .movie-card__content a{font-size:15px;margin:3px 0;}
   .movie-card__info{font-size:10px;margin-top:-3px;}
   .movie-card__content .btn{padding:3px 10px;}
