--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -1,6 +1,6 @@
 .gadgets_wrapper{margin-top:300px;}
 .gadgets_wrapper main {}
-.gadgets_wrapper main #filter{float:left;width:290px;background:#fff;border-right:1px solid #ccc;}
+.gadgets_wrapper main #filter{float:left;width:290px;background:#000;border-right:1px solid #ccc;color:#fff;}
 .gadgets_wrapper main #filter.on{position:fixed;top:100px;}
 .gadgets_wrapper main #filter .ui-group{}
 .gadgets_wrapper main #filter .ui-group label{font-family: 'Anton', sans-serif;font-size:50px;border-bottom:1px solid #ccc;padding-bottom:3px;margin-bottom:20px;display:block;width:60%;}
@@ -13,7 +13,6 @@
 .gadgets_wrapper main .gnb_open, 
 .gadgets_wrapper main .gnb_open_b,
 .gadgets_wrapper main .gnb_close{display:none;}
-
 
 @media screen and (max-width:680px){
   .gadgets_wrapper main #filter .ui-group label{}
@@ -39,7 +38,7 @@
   .gadgets_wrapper main #filter .color_group{margin-top:0;}
   .gadgets_wrapper main #filter .ui-group .control label,
   .gadgets_wrapper main #filter .color_group .color-circle{font-size:17px;}
-  
+  .gadgets_wrapper main #filter .ui-group ul li a{color:#fff;}
   .gadgets_wrapper main .gnb_open{display:block;position:fixed;right:5px;top:160px;z-index:301;margin:0 5%;}
   .gadgets_wrapper main .gnb_open.on{display:none;}
   .gadgets_wrapper main .gnb_open img{width:40px;height:40px;}
